1553 returnerer feilmelding
